application-mainfest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd-pipeline-demo
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
