application-mainfest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld-demo
  name: helloworld-demo
  namespace: helloworld-demo
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: helloworld-demo
