application-mainfest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: helloworld-demo
  name: helloworld-demo
  namespace: helloworld-demo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: helloworld-demo
    weight: 100
